# SKFJniEncrypt

./: README.md  README_zh.md  build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tongxin/sdjniencrypt/: EncryptUtil.java  MainActivity.java  StorageBean.java  StorageUtils.java  SyncActivity.java
app/src/main/res/layout/: activity_main.xml  activity_sync.xml
app/src/main/res/values/: strings.xml
distribution/tongfang/include/: SDSCDev.h  base_type.h
distribution/tongfang/lib/: bak_1216lib.rar
sdjni/: CMakeLists.txt  build.gradle
sdjni/src/main/cpp/: APDUs.c  APDUs.h  Algorithms.c  Algorithms.cpp  Algorithms.h  Global_Def.c  Global_Def.cpp  Global_Def.h  JNIEncrypt.c  SKF_ContainerManager.c  SKF_ContainerManager.h  SKF_CryptoService.c  SKF_CryptoService.cpp  SKF_CryptoService.h  SKF_DeviceManager.c  SKF_DeviceManager.cpp  SKF_DeviceManager.h  SKF_StatusCode.cpp  SKF_StatusCode.h  SKF_TypeDef.cpp  SKF_TypeDef.h  apdu1.h  checksignature.h  cryptoki.c  driver.c  errors.h  flag.h  framework.c  gcm128.c  gcm128.h  log.c  log.h  logger.h  operation.c  pkcs11.h  sdk.h  sha1.c  sha256.c  sha384.c  sha512.c  (+7 more)
sdjni/src/main/java/com/tongxin/sdjni/: AESEncrypt.java
sdjni/src/main/res/values/: strings.xml
